--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -14,6 +14,12 @@
   justify-content: center;
   align-items: center;
 }
+.space-btw {
+  justify-content: space-between;
+}
+.space-arr {
+  justify-content: space-around;
+}
 .rounded {
   border-radius: 12px;
 }
