--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -10,6 +10,14 @@
 .wrap {
   flex-wrap: wrap;
 }
+.end {
+  align-items: end;
+  justify-content: end;
+}
+.start {
+  align-items: end;
+  justify-content: start;
+}
 .center {
   justify-content: center;
   align-items: center;
