--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -12,11 +12,10 @@ table {
 }
 th,
 td {
-  padding: 8px;
+  padding: 8px 0;
   text-align: left;
 }
 th {
-  background-color: #f4f4f4;
   color: red;
   font-weight: bold;
 }
