--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -10,8 +10,7 @@
 table {
   width: 100%;
 }
-th,
-td {
+th {
   padding: 8px 0;
   text-align: left;
 }
@@ -22,4 +21,5 @@ th {
 
 td {
   font-size: small;
+  /* text-align: center; */
 }
