--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -9,6 +9,7 @@
 
 table {
   width: 100%;
+  border-collapse: collapse;
 }
 th {
   padding: 8px 0;
@@ -21,5 +22,8 @@ th {
 
 td {
   font-size: small;
-  /* text-align: center; */
+  padding: 8px;
+}
+tr:not(:last-child) td {
+  border-bottom: 1px solid #ddd;
 }
