--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -9,7 +9,7 @@
 
 table {
   width: 100%;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
 }
 th {
   padding: 8px 0;
@@ -26,4 +26,10 @@ td {
 }
 tr:not(:last-child) td {
   border-bottom: 1px solid #ddd;
+}
+
+.icons-de {
+  padding: auto;
+  height: 9vh;
+  align-items: center;
 }
