--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -26,3 +26,9 @@
 .info-value {
   text-align: left;
 }
+
+.scrollable-description {
+  max-height: 40px;
+  overflow-y: scroll;
+  border-radius: 4px;
+}
