--- a/src/pages/UserProfile/style.css
+++ b/src/pages/UserProfile/style.css
@@ -10,6 +10,11 @@
   justify-content: center;
 }
 
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
 .choose-file {
   position: absolute;
   top: 16.5vh;
