introducing header to login and signup

--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -48,6 +48,11 @@
   width: 100vw;
   height: 100vh;
 }
+.page-oo {
+  background-color: #f1f1f1;
+  width: 80vw;
+  height: 80vh;
+}
 .gap {
   gap: 24px;
 }
