initializing the color cot statistics

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -53,3 +53,18 @@
 .primary-color {
   color: #00b7eb;
 }
+
+.green-stat {
+  color: #289900;
+}
+
+.red-star {
+  color: #ff5959;
+}
+
+.blue-stat {
+  color: #344bfd;
+}
+.yellow-stat {
+  color: #faff00;
+}
