--- a/src/pages/AddMachine/style.css
+++ b/src/pages/AddMachine/style.css
@@ -1,5 +1,3 @@
-.container {
-}
 .addMachine-container {
   padding: 30px;
 }
@@ -8,8 +6,9 @@
   align-items: center;
 }
 .machine-inputs {
-  max-height: 55vh;
-  overflow-y: scroll;
+  max-width: 70vw;
+  padding: 24px;
+  border-radius: 12px;
 }
 
 .machineImage {
@@ -28,4 +27,15 @@
   z-index: 1;
   top: 21vh;
   left: 23.5vw;
+}
+
+.btn-con {
+  padding: 14px;
+  width: 64vw;
+  align-items: center;
+}
+.title {
+  width: 64vw;
+  padding: 14px;
+  align-items: start;
 }
