--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -1,6 +1,5 @@
 .machine-card {
   width: 30vw;
-  height: fit-content;
   border-radius: 24px 24px 0 0;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
@@ -37,4 +36,7 @@
   max-height: 70px;
   overflow-y: scroll;
   border-radius: 4px;
+}
+.only-image {
+  height: 30px;
 }
