--- a/src/pages/Signup/style.css
+++ b/src/pages/Signup/style.css
@@ -6,3 +6,32 @@
   border-radius: 24px;
   border: 1px solid #878787;
 }
+
+.signup-container {
+  padding: 30px;
+  border-radius: 24px;
+  border: 1px solid #878787;
+  background: linear-gradient(
+    to top,
+    rgba(78, 78, 78, 0.8),
+    rgba(78, 78, 78, 0.2)
+  );
+}
+
+.Admin-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+.Admin-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
