--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -1,9 +1,6 @@
 .machine-card {
-  width: 30vw;
   border-radius: 24px 24px 0 0;
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
+  border: 1px solid black;
 }
 
 .machine-info {
@@ -11,9 +8,6 @@
   padding: 24px;
 }
 
-.image-machine {
-  width: fit-content;
-}
 .info-table {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -37,6 +31,6 @@
   overflow-y: scroll;
   border-radius: 4px;
 }
-.only-image {
+/* .only-image {
   height: 30px;
-}
+} */
