--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -16,7 +16,6 @@ th {
   text-align: left;
 }
 th {
-  color: red;
   font-weight: bold;
 }
 
@@ -34,6 +33,7 @@ tr:not(:last-child) td {
   align-items: center;
 }
 .user-table {
-  max-height: 70vw;
+  max-height: 71vw;
   overflow-y: scroll;
+  scrollbar-width: none;
 }
