--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -8,3 +8,12 @@
 .dash-cont {
   height: 100%;
 }
+.error-message {
+  color: #ff4d4d;
+  background-color: #ffe6e6;
+  padding: 10px;
+  border: 1px solid #ff4d4d;
+  border-radius: 5px;
+  margin-top: 10px;
+  width: fit-content;
+}
