--- a/src/pages/AddMachine/style.css
+++ b/src/pages/AddMachine/style.css
@@ -1,5 +1,5 @@
 .addMachine-container {
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 }
 
 .machine-image-container {
@@ -8,7 +8,7 @@
 }
 .machine-inputs {
   max-width: 70vw;
-  padding: 24px;
+  padding: 24px 24px 12px 24px;
   border-radius: 12px;
 }
 
