--- a/src/pages/Alerts/style.css
+++ b/src/pages/Alerts/style.css
@@ -5,10 +5,18 @@
 .title-notification {
   padding: 24px;
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
 }
 .mark-read {
   cursor: pointer;
 }
 .blue-txt:hover {
   text-decoration: underline;
+}
+
+.notification-info {
+  max-height: 760px;
+  overflow-y: auto;
+  scrollbar-width: none;
+  position: relative;
 }
