--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -7,7 +7,7 @@
 .login-container {
   padding: 30px;
   border-radius: 24px;
-  border: 1px solid #878787;
+  /* border: 1px solid #878787; */
   background: linear-gradient(
     to top,
     rgba(78, 78, 78, 0.8),
@@ -24,12 +24,4 @@
   height: 100%;
   object-fit: cover;
   z-index: -1;
-}
-.Admin-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-  position: relative;
 }
