--- a/src/pages/Signup/style.css
+++ b/src/pages/Signup/style.css
@@ -1,16 +1,13 @@
-.signup-input {
-  gap: 10px;
-}
 .signup-container {
   padding: 30px;
   border-radius: 24px;
-  border: 1px solid #878787;
+  /* border: 1px solid #878787; */
 }
 
 .signup-container {
   padding: 30px;
   border-radius: 24px;
-  border: 1px solid #878787;
+  /* border: 1px solid #878787; */
   background: linear-gradient(
     to top,
     rgba(78, 78, 78, 0.8),
