--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -1,6 +1,6 @@
 .machine-card {
-  border-radius: 24px 24px 0 0;
-  border: 1px solid black;
+  border-radius: 24px;
+  /* border: 1px solid black; */
 }
 
 .machine-info {
