--- a/src/base/ChooseOption/style.css
+++ b/src/base/ChooseOption/style.css
@@ -2,13 +2,29 @@
   position: absolute;
   background-color: #fff;
   z-index: 1000;
-  border: "1px solid #ddd";
   max-height: 200px;
   overflow: auto;
+  scrollbar-width: none;
+  top: 100%;
+  left: 0;
 }
 
 .selected-option {
   padding: 8px;
   cursor: pointer;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid gray;
+}
+
+.selected-option:last-child {
+  border-bottom: 1px solid gray;
+  border-radius: 0 0 12px 12px;
+}
+
+.input-container {
+  gap: 6px;
+  position: relative;
+}
+
+.selected-option:hover {
+  border: 1px solid #d3d3d3;
 }
