--- a/src/base/DropButton/style.css
+++ b/src/base/DropButton/style.css
@@ -8,3 +8,21 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.toggle-option-btn {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
+}
+
+.toggle-option-btn:last-child {
+  border-radius: 12px;
+}
+
+/* .selected-option-btn {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: rgb(230, 230, 230);
+  z-index: 1000;
+} */
