--- a/src/pages/AllTasks/style.css
+++ b/src/pages/AllTasks/style.css
@@ -14,7 +14,14 @@
   padding: 8px;
 }
 
-.tasks-body {
+.tasks-table {
+  height: 600px;
   overflow-y: auto;
-  max-height: 400px;
+  scrollbar-width: none;
+}
+.tasks-table thead {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
 }
