--- a/src/components/DashboardFilter/style.css
+++ b/src/components/DashboardFilter/style.css
@@ -3,12 +3,8 @@
   top: 24%;
   left: 62%;
   padding: 24px;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 24px;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.6),
-    rgba(248, 248, 248, 0.2)
-  );
   border: 1px solid lightgrey;
 }
 .btn-date {
