--- a/src/components/TaskFilter/style.css
+++ b/src/components/TaskFilter/style.css
@@ -1,12 +1,8 @@
 .taskFilter-wrapper {
   padding: 24px;
   border-radius: 24px;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.6),
-    rgba(248, 248, 248, 0.2)
-  );
   border: 1px solid lightgrey;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 .underline {
   text-decoration: underline;
