adjusting the styling of border for all input buttons

--- a/src/base/Input/style.css
+++ b/src/base/Input/style.css
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 12px;
   border-radius: 8px;
-  border: 1px solid #878787;
+  border: 1px solid #c7c7c7;
   gap: 6px;
 }
 .input-field {
