--- a/src/base/ChooseOption/style.css
+++ b/src/base/ChooseOption/style.css
@@ -12,11 +12,11 @@
 .selected-option {
   padding: 8px;
   cursor: pointer;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #c7c7c7;
 }
 
 .selected-option:last-child {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #c7c7c7;
   border-radius: 0 0 12px 12px;
 }
 
