--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -4,7 +4,9 @@
 .secondary-bg {
   background-color: #f1f1f1;
 }
-
+.terchuery-bg {
+  background-color: #171a1d;
+}
 .Lprimary-bg {
   background-color: #ddf7ff;
 }
