--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -43,8 +43,13 @@
 .full-height {
   height: 100%;
 }
-.page {
+.light-mode {
   background-color: #f7f7f7;
+  width: 100vw;
+  height: 100vh;
+}
+.dark-mode {
+  background-color: #171a1d;
   width: 100vw;
   height: 100vh;
 }
