--- a/src/base/Slider/style.css
+++ b/src/base/Slider/style.css
@@ -1,4 +1,4 @@
-.slider-container {
+.slider-mode-container {
   background-color: rgb(197, 197, 197);
   border-radius: 24px;
   width: 48px;
@@ -8,7 +8,7 @@
   transition: background-color 0.3s ease;
 }
 
-.switch {
+.switch-mode {
   width: 24px;
   height: 24px;
   background-color: #fff;
