--- a/src/pages/AllUsers/style.css
+++ b/src/pages/AllUsers/style.css
@@ -35,6 +35,7 @@ tr:not(:last-child) td {
   height: 650px;
   overflow-y: auto;
   scrollbar-width: none;
+  border-radius: 24px;
 }
 .user-table thead {
   position: sticky;
