--- a/src/pages/Alerts/style.css
+++ b/src/pages/Alerts/style.css
@@ -4,7 +4,6 @@
 
 .title-notification {
   padding: 24px;
-  background-color: rgba(255, 255, 255, 0.5);
   position: relative;
 }
 .mark-read {
@@ -15,8 +14,13 @@
 }
 
 .notification-info {
-  height: 80vh;
+  height: 70vh;
+  border-radius: 24px;
   overflow-y: auto;
   scrollbar-width: none;
   position: relative;
+}
+
+.notification-box {
+  border-radius: 24px;
 }
