adding prop to header comonent and adjust the global color  style

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -59,7 +59,12 @@
 .primary-color {
   color: #00b7eb;
 }
-
+.white-color {
+  color: white;
+}
+.black-color {
+  color: black;
+}
 .green-stat {
   color: rgba(0, 255, 0, 1);
 }
