--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -1,8 +1,8 @@
 .machine-card {
   border-radius: 24px;
-  /* border: 1px solid black; */
+  background-color: var(--bg-card);
+  color: var(--text-card);
 }
-
 .machine-info {
   gap: 5px;
   padding: 24px;
