--- a/src/base/ReactDate/style.css
+++ b/src/base/ReactDate/style.css
@@ -11,3 +11,11 @@
 .border {
   border: 1px solid #d6d6d6;
 }
+
+.date-picker-dark {
+  color: white;
+}
+
+.date-picker-light {
+  color: black;
+}
