--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -1,9 +1,10 @@
 .stat-input {
-  width: 75vw;
+  width: 100%;
   align-items: center;
+  justify-self: space-between;
 }
 .stat-title {
-  width: 75vw;
+  width: 100%;
 }
 .dash-cont {
   height: 100%;
@@ -18,6 +19,5 @@
   width: fit-content;
 }
 .dashboard-container {
-  padding: 60px 0 0 30px;
   align-items: start;
 }
