adding style to sparepart prediction

--- a/src/components/PredictionCard/style.css
+++ b/src/components/PredictionCard/style.css
@@ -9,6 +9,17 @@
 }
 
 .assign-task {
+  cursor: pointer;
   color: blue;
+}
+.assign-task:hover {
   text-decoration: underline;
+}
+
+.top-sparepart-prediction {
+  width: calc(80vw + 24px);
+}
+
+.sensor-reading {
+  padding: 12px;
 }
