--- a/src/components/StatisticTable/style.css
+++ b/src/components/StatisticTable/style.css
@@ -1,7 +1,8 @@
 .table-container {
   margin: 0 auto;
   padding: 20px;
-  width: 50%;
+  width: 40vw;
+  border-radius: 24px;
 }
 
 .statistics-table {
@@ -11,13 +12,11 @@
 
 .statistics-table th,
 .statistics-table td {
-  border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
 }
 
 .statistics-table th {
-  background-color: #f2f2f2;
   font-weight: bold;
 }
 
