--- a/src/components/MachineCard/style.css
+++ b/src/components/MachineCard/style.css
@@ -2,32 +2,45 @@
   border-radius: 24px;
   background-color: var(--bg-card);
   color: var(--text-card);
+  height: auto; /* This makes sure the card adjusts its height based on content */
+  display: flex;
+  flex-direction: column;
 }
+
 .machine-info {
   gap: 5px;
   padding: 24px;
+  flex-grow: 1; /* This will push the content down to maintain equal height */
 }
 
-.info-table {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 10px 20px;
-}
-
-.info-row {
-  display: contents;
-}
-
-.info-label {
-  font-weight: bold;
-}
-
-.info-value {
-  text-align: left;
+.only-image {
+  height: 10vw; /* Adjust this to maintain consistency between cards */
+  width: 100%;
+  object-fit: cover; /* Ensures that the image covers the entire area without stretching */
 }
 
 .scrollable-description {
   max-height: 70px;
   overflow-y: scroll;
   border-radius: 4px;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.space-btw {
+  justify-content: space-between;
+}
+
+.gap-btn {
+  gap: 10px;
+}
+
+.border {
+  border-bottom: 1px solid gray;
 }
